[tool.poetry]
name = "mmmap_benchmark"
version = "0.1.0"
description = ""
authors = ["Andrey Vasnetsov <andrey@vasnetsov.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
scipy = "^1.6.3"
sklearn = "^0.0"
tqdm = "^4.61.0"
numpy = "^1.20.3"
update = "^0.0.1"
qdrant-client = "^0.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
